# VirtualARM

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/native/: CMakeLists.txt  virtual_arm.cc
app/src/main/native/asm/arm64/: cpu_arm64.cc  cpu_arm64.h  fields_table.inl  instruction_fields.h
app/src/main/native/asm/arm64/visitors/: deocde_a64.h
app/src/main/native/base/: file.cc  file.h  hash_table.h  log.cc  log.h  marcos.cc  marcos.h  threadsafe_queue.h
app/src/main/native/block/: code_cache.h  code_find_table.h  code_set.cc  code_set.h  host_code_block.cc  host_code_block.cpp  host_code_block.h  module.cc  module.h
app/src/main/native/dbi/arm64/: context_new.cc  context_new.h  dbi_arm64.cc  dbi_arm64.h  dbi_block_stubs.cc  dbi_block_stubs.h  dbi_context_arm64.cc  dbi_context_arm64.h  dbi_global_stubs.cc  dbi_global_stubs.h  dbi_jit_context.cc  dbi_jit_context.h
app/src/main/native/dbi/arm64/decode/: decode_vixl.cc  decode_vixl.h
app/src/main/native/dbi/arm64/jit/: jit_branch.h  jit_load_store.h  jit_system.h
app/src/main/native/frontend/ir/: assembler_ir.h  block_ir.cc  block_ir.h
app/src/main/native/includes/: code_block.h  dbi.h  entry_point.h
app/src/main/native/loader/: nro.cc  nro.h
app/src/main/native/memory/: mmu.h
app/src/main/native/platform/: memory.cc  memory.h
app/src/main/native/svm/arm64/: svm_arm64.cc  svm_arm64.h  svm_block_stubs.cc  svm_block_stubs.h  svm_context.cc  svm_context.h  svm_diskcache_loader.cc  svm_diskcache_loader.h  svm_global_stubs.cc  svm_global_stubs.h  svm_jit_arm64.cc  svm_jit_arm64.h  svm_jit_context.cc  svm_jit_context.h  svm_jit_manager.cc  svm_jit_manager.h  svm_mmu.cc  svm_mmu.h  svm_thread.cc  svm_thread.h  svm_trampolines_arm64.cc  svm_trampolines_arm64.h
app/src/main/native/svm/arm64/decode/: decode_vixl.cc  decode_vixl.h
app/src/main/native/svm/arm64/jit/: jit_branch.h  jit_load_store.h  jit_system.h
